Fix types on MDX Tags

--- a/developers/run-a-skale-chain/access-control.mdx
+++ b/developers/run-a-skale-chain/access-control.mdx
@@ -97,7 +97,7 @@ SKALE Chains by default come with the permission layer enabled. However, the per
 
 The following is how to add an address to the SKALE Chain whitelist:
 
-<Note type="note">
+<Note>
 The `msg.sender` must have `DEPLOYER_ADMIN_ROLE` to call this successfully.
 </Note>
 
@@ -135,7 +135,7 @@ The `msg.sender` must have `DEPLOYER_ADMIN_ROLE` to call this successfully.
 
 The following is how to remove an address from the SKALE Chain whitelist:
 
-<Note type="note">
+<Note>
 The `msg.sender` must have `DEPLOYER_ADMIN_ROLE` to call this successfully.
 </Note>
 
@@ -173,7 +173,7 @@ The `msg.sender` must have `DEPLOYER_ADMIN_ROLE` to call this successfully.
 
 The following is how to add an admin which can manage a smart contract whitelist:
 
-<Note type="note">
+<Note>
 The `msg.sender` must have `DEPLOYER_ADMIN_ROLE` to call this successfully.
 </Note>
 
@@ -212,7 +212,7 @@ The `msg.sender` must have `DEPLOYER_ADMIN_ROLE` to call this successfully.
 
 The following is how to remove an admin from managing a smart contract whitelist:
 
-<Note type="note">
+<Note>
 The `msg.sender` must have `DEPLOYER_ADMIN_ROLE` to call this successfully.
 </Note>
 
@@ -251,7 +251,7 @@ The `msg.sender` must have `DEPLOYER_ADMIN_ROLE` to call this successfully.
 
 The following is how to add an address to the SKALE Chain whitelist:
 
-<Note type="note">
+<Note>
 The `msg.sender` must have `allowedOriginRoleAdmin(deployer)` to call this successfully.
 </Note>
 
@@ -291,7 +291,7 @@ The `msg.sender` must have `allowedOriginRoleAdmin(deployer)` to call this succe
 
 The following is how to remove an address from the SKALE Chain whitelist:
 
-<Note type="note">
+<Note>
 The `msg.sender` must have `allowedOriginRoleAdmin(deployer)` to call this successfully.
 </Note>
 
