--- a/developers/skale-bridge/ethereum/bridge-eth.mdx
+++ b/developers/skale-bridge/ethereum/bridge-eth.mdx
@@ -33,7 +33,7 @@ To bridge ETH from Ethereum to SKALE, you should deposit ETH on Ethereum Mainnet
 
 ### Bridge to SKALE (from Ethereum)
 
-<Note type="note">
+<Note>
 The following does not require any gas (i.e sFUEL) on the SKALE Chain. Please note to **exit** to Ethereum once you are on SKALE,
 you will need ETH on Ethereum to fill up your community wallet.
 </Note>
@@ -91,7 +91,7 @@ SKALE's decentralized bridge offers a simple two-step process to bridge ETH from
 
 2. The second step is to initiate the bridge (technically known as an exit) on the SKALE Chain
 
-<Note type="note">
+<Note>
 Gas Wallet, officially referred to as the community pool, is a smart contract on Ethereum that is used to handle exits from SKALE. Users pre-pay ETH into this contract which is then used to reimburse validators for the gas costs of the bridge cost back to Ethereum. Make sure users top up their gas wallet to ensure the bridge is successful.
 </Note>
 
@@ -170,7 +170,7 @@ await exitTx.wait(1);
 console.log("Success!");
 ```
 
-<Note type="note">
+<Note>
 If your bridge is not working, it is most likely for one of three reasons:
 
 1. You forgot to prepay for gas
