--- a/developers/skale-bridge/skale/bridge-erc1155.mdx
+++ b/developers/skale-bridge/skale/bridge-erc1155.mdx
@@ -15,7 +15,7 @@ The following walks you through setting up an ERC-1155 token between two SKALE C
 
 ## Bridge Setup
 
-<Note type="note">
+<Note>
 If the SKALE Chains you are mapping the ERC-1155 token from/to are not connected, please [connect the SKALE Chains](/developers/skale-bridge/skale/connect-schains).
 </Note>
 
@@ -98,11 +98,11 @@ contract InGameTokens is InterchainERC1155("ipfs://<cid>") {}
 
 ### 3. Map the SKALE Token
 
-<Note type="note">
+<Note>
 If you are trying to setup a token on SKALE in a production environment please join us in [Discord](https://discord.gg/skale) for support!
 </Note>
 
-<Warning type="warning">
+<Warning>
 Make sure to replace the values with your SKALE Chain name and the correct token addresses.
 </Warning>
 
