--- a/developers/skale-bridge/skale/bridge-erc20.mdx
+++ b/developers/skale-bridge/skale/bridge-erc20.mdx
@@ -15,7 +15,7 @@ The following walks you through setting up an ERC-20 token between two SKALE Cha
 
 ## Bridge Setup
 
-<Note type="note">
+<Note>
 If the SKALE Chains you are mapping the ERC-20 token from/to are not connected, please [connect the SKALE Chains](/developers/skale-bridge/skale/connect-schains).
 </Note>
 
@@ -162,7 +162,7 @@ The flow for bridging an ERC-20 from SKALE Chain to SKALE Chain follows a very s
 
 If bridging a token nativley deployed on a SKALE Chain to another SKALE Chain, the process for bridging in either direction is identical. The action taken by the chain is slightly different (i.e lock and mint vs burn and unlock), however, for the end user the flow is identical i.e receive N new tokens in their wallet.
 
-<Note type="note">
+<Note>
 A normal ERC-20 bridge will result in tokens being delivered to the same wallet on the new SKALE Chain.
 A direct ERC-20 bridge will result in tokens being delivered to the specified wallet on the new SKALE Chain.
 </Note>
