--- a/developers/skale-bridge/skale/bridge-erc721.mdx
+++ b/developers/skale-bridge/skale/bridge-erc721.mdx
@@ -98,7 +98,7 @@ contract InterchainNFT is InterchainERC721("NFT Name", "NFT Symbol", "ipfs://<ci
 
 ### 3. Map the SKALE Token
 
-<Note type="note">
+<Note>
 If you are trying to setup a token on SKALE in a production environment please join us in [Discord](https://discord.gg/skale) for support!
 </Note>
 
