--- a/get-started/quick-start/skale-on-base.mdx
+++ b/get-started/quick-start/skale-on-base.mdx
@@ -5,7 +5,7 @@ tag: "NEW"
 ---
 
 <Note>
-The first SKALE Chain is publicly available on [testnet](#skale-base-testnet) and in private beta on [mainnet](##skale-base-mainnet)
+The first SKALE Chain is publicly available on [testnet](#skale-base-testnet) and in private beta on [mainnet](#skale-base-mainnet)
 </Note>
 
 ## Key Features
@@ -38,13 +38,13 @@ If you are looking to host your agent card with SKALE File Storage or have your 
 
 ### SKALE Base Mainnet Tokens
 
-| Name | Symbol | Decimals | Base Sepolia Address | SKALE Base Sepolia Address |
+| Name | Symbol | Decimals | Base Address | SKALE Base Address |
 | --- | --- | --- | --- | --- |
-| USDC | USDC.e | 6 | [0x833...913](https://basescan.org/token/0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913) | [0x858...b20](https://skale-base-explorer.skalenodes.com/token/0x858F42C848954324840980690C3124060428D478) |
-| Tether USD | USDT | 6 | [0xfde...bb2](https://basescan.org/token/0xfde4C96c8593536E31F229EA8f37b2ADa2699bb2) | [0x858...b20](https://skale-base-explorer.skalenodes.com/token/0x858F42C848954324840980690C3124060428D478) |
-| Wrapped BTC | WBTC | 8 | [0x055...B9c](https://basescan.org/token/0x0555E30da8f98308EdB960aa94C0Db47230d2B9c) | [0x858...b20](https://skale-base-explorer.skalenodes.com/token/0x858F42C848954324840980690C3124060428D478) |
-| Wrapped Ether | WETH | 6 | [0x420...006](https://basescan.org/token/0x4200000000000000000000000000000000000006) | [0x858...b20](https://skale-base-explorer.skalenodes.com/token/0x858F42C848954324840980690C3124060428D478) |
-| ETH (ERC-20) | ETHC | 6 | Native ETH (Gas) on Base | [0xD2Aaa007...000](https://skale-base-explorer.skalenodes.com/token0xD2Aaa00700000000000000000000000000000000) |
+| USDC | USDC.e | 6 | [0x833...913](https://basescan.org/token/0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913) | [0x858...b20](https://skale-base-explorer.skalenodes.com/token/0x85889c8c714505E0c94b30fcfcF64fE3Ac8FCb20) |
+| Tether USD | USDT | 6 | [0xfde...bb2](https://basescan.org/token/0xfde4C96c8593536E31F229EA8f37b2ADa2699bb2) | [0x2bF...fCa](https://skale-base-explorer.skalenodes.com/token/0x2bF5bF154b515EaA82C31a65ec11554fF5aF7fCA) |
+| Wrapped BTC | WBTC | 8 | [0x055...B9c](https://basescan.org/token/0x0555E30da8f98308EdB960aa94C0Db47230d2B9c) | [0x1ae...90e](https://skale-base-explorer.skalenodes.com/token/0x1aeeCFE5454c83B42D8A316246CAc9739E7f690e) |
+| Wrapped Ether | WETH | 6 | [0x420...006](https://basescan.org/token/0x4200000000000000000000000000000000000006) | [0x7bD...486](https://skale-base-explorer.skalenodes.com/token/0x7bD39ABBd0Dd13103542cAe3276C7fA332bCA486) |
+| ETH (ERC-20) | ETHC | 6 | Native ETH (Gas) on Base | [0xD2Aaa007...000](https://skale-base-explorer.skalenodes.com/address/0xD2Aaa00700000000000000000000000000000000) |
 
 
 ## SKALE Base Testnet
@@ -61,16 +61,16 @@ If you are looking to host your agent card with SKALE File Storage or have your 
 | Portal | https://base-sepolia.skalenodes.com |
 | Faucet | https://base-sepolia-faucet.skale.space |
 
-### SKALE Base Testnet Tokens
+### SKALE Base Sepolia Testnet Tokens
 
-| Name | Symbol | Decimals | Base Sepolia Address | SKALE Base Sepolia Address |
+| Name | Symbol | Decimals | Base Sepolia Address | SKALE Base Sepolia Testnet Address |
 | --- | --- | --- | --- | --- |
-| SKALE | SKL | 18 | [0xC20...2cF](https://basescan.org/token/0xC20874EB2D51e4e61bBC07a4E7CA1358F449A2cF) | [0xaf2...57b](https://base-sepolia-testnet-explorer.skalenodes.com/token/0xaf2e0ff5b5f51553fdb34ce7f04a6c3201cee57b) |
-| USDC | USDC.e | 6 | [0x036...F7e](https://basescan.org/token/0x036CbD53842c5426634e7929541eC2318f3dCF7e) | [0x2e0...0bD](https://base-sepolia-testnet-explorer.skalenodes.com/token/0x2e08028E3C4c2356572E096d8EF835cD5C6030bD) |
-| Tether USD | USDT | 6 | [0x0ed...4a8](https://basescan.org/token/0x0eda7df37785f570560dA74ceCFD435AB60D84a8) | [0x3ca...0bf](https://base-sepolia-testnet-explorer.skalenodes.com/token/0x3ca0a49f511c2c89c4dcbbf1731120d8919050bf) |
-| Wrapped BTC | WBTC | 8 | [0xC38...8Bc](https://basescan.org/token/0xC3893AEC98b41c198A11AcD9db17688D858588Bc) | [0x451...e87](https://base-sepolia-testnet-explorer.skalenodes.com/token/0x4512eacd4186b025186e1cf6cc0d89497c530e87) |
-| Wrapped Ether | WETH | 6 | [0x420...006](https://basescan.org/token/0x4200000000000000000000000000000000000006) | [0xf94...fc0](https://base-sepolia-testnet-explorer.skalenodes.com/token/0xf94056bd7f6965db3757e1b145f200b7346b4fc0) |
-| ETH (ERC-20) | ETHC | 6 | Native ETH (Gas) on Base | [0xD2Aaa007...000](https://base-sepolia-testnet-explorer.skalenodes.com/token/0xD2Aaa00700000000000000000000000000000000) |
+| SKALE | SKL | 18 | [0xC20...2cF](https://sepolia.basescan.org/token/0xC20874EB2D51e4e61bBC07a4E7CA1358F449A2cF) | [0xaf2...57b](https://base-sepolia-testnet-explorer.skalenodes.com/token/0xaf2e0ff5b5f51553fdb34ce7f04a6c3201cee57b) |
+| USDC | USDC.e | 6 | [0x036...F7e](https://sepolia.basescan.org/token/0x036CbD53842c5426634e7929541eC2318f3dCF7e) | [0x2e0...0bD](https://base-sepolia-testnet-explorer.skalenodes.com/token/0x2e08028E3C4c2356572E096d8EF835cD5C6030bD) |
+| Tether USD | USDT | 6 | [0x0ed...4a8](https://sepolia.basescan.org/token/0x0eda7df37785f570560dA74ceCFD435AB60D84a8) | [0x3ca...0bf](https://base-sepolia-testnet-explorer.skalenodes.com/token/0x3ca0a49f511c2c89c4dcbbf1731120d8919050bf) |
+| Wrapped BTC | WBTC | 8 | [0xC38...8Bc](https://sepolia.basescan.org/token/0xC3893AEC98b41c198A11AcD9db17688D858588Bc) | [0x451...e87](https://base-sepolia-testnet-explorer.skalenodes.com/token/0x4512eacd4186b025186e1cf6cc0d89497c530e87) |
+| Wrapped Ether | WETH | 6 | [0x420...006](https://sepolia.basescan.org/token/0x4200000000000000000000000000000000000006) | [0xf94...fc0](https://base-sepolia-testnet-explorer.skalenodes.com/token/0xf94056bd7f6965db3757e1b145f200b7346b4fc0) |
+| ETH (ERC-20) | ETHC | 6 | Native ETH (Gas) on Base | [0xD2Aaa007...000](https://base-sepolia-testnet-explorer.skalenodes.com/address/0xD2Aaa00700000000000000000000000000000000) |
 
 
 ### Chain Notes
