staking skl broken links

--- a/get-started/skl-token/staking-skl.mdx
+++ b/get-started/skl-token/staking-skl.mdx
@@ -5,7 +5,7 @@ description: "Mechanics of delegating and staking SKL tokens on the SKALE Networ
 
 ## Stake SKL Token
 
-To stake your SKL tokens, visit the [SKALE Portal Staking Page](https://portal.skale.network/staking).
+To stake your SKL tokens, visit the [SKALE Portal Staking Page](https://portal.skale.space/staking).
 Connect the wallet of your choice, select a validator, and stake!
 
 <Note>
@@ -63,4 +63,4 @@ You can undelegate your tokens at any time except for within the last 3 days of 
 
 ### What is the minimum delegation amount?
 
-This is set by the validator organization and can be found on the validator's page on the [SKALE Portal](https://portal.skale.network/validators).
+This is set by the validator organization and can be found on the validator's page on the [SKALE Portal](https://portal.skale.space/validators).
