Fix double SKALE on EVM Differences

--- a/developers/integrate-skale/evm-differences.mdx
+++ b/developers/integrate-skale/evm-differences.mdx
@@ -11,9 +11,7 @@ While the execution environment mirrors Ethereum's, SKALE introduces key differe
 
 ### Gas Fees & Economics
 
-**SKALE**: Zero gas fees with pre-paid compute credits, sFUEL is distributed for DoS protection and has no monetary value. Transactions are gasless
-
-**SKALE**: Zero gas fees by default with compute credits or sFUEL or optional gasless transactions with *Proof-of-Work*.
+**SKALE**: Zero gas fees by default with compute credits or sFUEL. Gasless transactions with *Proof-of-Work* and sFUEL-based chains.
 
 **Ethereum**: Variable gas fees paid in ETH, market-based pricing with EIP-1559 base fees + priority fees.
 
