Fix Homepage Links

--- a/get-started/skale.mdx
+++ b/get-started/skale.mdx
@@ -23,16 +23,16 @@ description: "Purpose-built for the Internet of Agents"
   </Card>
 </CardGroup>
 
-Explore [developer guides](/cookbook/agents/build-an-agent) and [use cases](/get-started/use-cases/ai-agents).
+Explore [developer guides](/cookbook/agents/build-an-agent) and [use cases](/get-started/resources/official-links).
 
 ### **Get Funded**
 
 <CardGroup cols={2}>
-  <Card title="Grant Program" icon="hand-holding-dollar" href="">
+  <Card title="Grant Program" icon="hand-holding-dollar" href="https://skalelabs.notion.site/2c584b42e3cb805cae4dc3c31c903076?pvs=105">
     Apply for SKALE grants to accelerate your project development and innovation.
   </Card>
 
-  <Card title="Join the Community" icon="users" href="/get-started/resources/official-links">
+  <Card title="Join the Community" icon="users" href="https://discord.gg/skale">
     Connect with ecosystem builders, receive techncial support, and collaborate with others in the SKALE Ecosystem.
   </Card>
 </CardGroup>
@@ -40,7 +40,7 @@ Explore [developer guides](/cookbook/agents/build-an-agent) and [use cases](/get
 ### **Stakers and Validators**
 
 <CardGroup cols={2}>
-  <Card title="For Stakers" href="/get-started/staking/staking-skl">
+  <Card title="For Stakers" href="/get-started/skl-token/staking-skl">
     Stake SKL tokens to secure the SKALE Network and recieve bounties for your economic collateral.
   </Card>
 
