broken links fix using AI crawling

--- a/developers/integrate-skale/connect-to-skale.mdx
+++ b/developers/integrate-skale/connect-to-skale.mdx
@@ -65,7 +65,7 @@ The following are active sChains. SKALE Chains are built on different base netwo
 | --- | --- |
 | RPC Url | https://testnet.skalenodes.com/v1/giant-half-dual-testnet |
 | Chain Id | 974399131 |
-| Explorer | https://giant-half-dual.explorer.testnet.skalenodes.com/ |
+| Explorer | https://giant-half-dual-testnet.explorer.testnet.skalenodes.com/ |
 | Portal | https://testnet.portal.skale.space/chains/calypso |
 
 #### Europa Mainnet
