Add Azure link w/ intel

--- a/validators/supernode-overview.mdx
+++ b/validators/supernode-overview.mdx
@@ -104,6 +104,7 @@ authorize transactions. Currently, other than bare-metal servers, SGX is support
 - [Alibaba Cloud](https://www.alibabacloud.com/help/doc-detail/108507.html?spm=a2c5t.10695662.1996646101.searchclickresult.84d1a80dPBX0Di)
 - [Equinix](https://www.equinix.com/services/edge-services/smartkey/)
 - [IBM Cloud Data Guard](https://www.ibm.com/cloud/blog/data-use-protection-ibm-cloud-using-intel-sgx?mhsrc=ibmsearch_a&mhq=sgx)
+- [Microsoft Azure](https://www.intel.com/content/www/us/en/developer/articles/technical/microsoft-azure-confidential-computing-with-intel-sgx.html)
 
 (HSMs) Ledger Nano, or Trezor can support ECDSA signatures but not BLS signatures at this time, which are used by SKALE Consensus.
 
